--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "13.1.6",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
+    "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "18.2.0",
     "typewriter-effect": "^2.19.0"
   },
